# pp-motorized-injector-ui

./: .gitignore  README.md  esp32-s3-devkitc-1-myboard.json  esp32-s3-devkitc-1-waveshare.json  injector_initial_layout.eez-project  lv_conf_old.h  platformio.ini
docs/: PRD.md
esp-idf/: CMakeLists.txt  platformio.ini
esp-idf/main/: CMakeLists.txt  app_main.cpp  display_port.cpp  touch_port.cpp  uart_display_proto.cpp  uart_display_proto.h  ui_bindings.cpp  ui_bindings.h
include/: lv_conf.h  touch.h
src/: display_comms.cpp  display_comms.h  main.cpp  prd_ui.cpp  prd_ui.h  storage.cpp  storage.h
src/ui/: actions_impl.cpp  eez-flow.cpp  eez-flow.h  screens.c  screens.h  structs.h  ui.c  ui.h  vars.h
